# rfp-ml

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  Dockerfile.backend  FEATURE_ROADMAP.md  FRONTEND_SETUP.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  WARP.md  backend.Dockerfile  build_and_test_rag.py  docker-compose.yml  env.example  env.template  frontend.Dockerfile  nginx.conf  pyproject.toml  requirements.txt  requirements_api.txt  requirements_fixed.txt  requirements_llm.txt  test_complete_pipeline.py  test_complete_system.py  test_compliance_with_rag.py  test_enhanced_proposal.py  test_integrated_pipeline.py  test_sector_queries.py  test_source_tracking.py  validate_compliance_matrix.py
analysis/: llm_infrastructure_report.py  pricing_engine_summary.py  rag_final_validation_summary.py  rag_implementation_summary.py  subtask_completion_report.py
data/: dataset_rfp.txt  test_houston_rfp_scrape.json
debug_scripts/: analyze_pricing_data.py  check_rag_index_health.py  comprehensive_rag_validation.py  demo_llm_usage.py  download_priority_datasets.sh  examine_processed_data.py  explore_existing_data.py  final_infrastructure_validation.py  final_llm_validation.py  final_llm_validation_fixed.py  infrastructure_status_report.py  inspect_rfp_master_schema.py  parse_dataset_catalog.py  pricing_integration_demo.py  pricing_system_demo.py  rag_system_demo.py  robust_data_loader.py  simple_mock_test.py  simple_rag_test.py  subtask1_completion_demo.py  test_agent_pipeline_run.py  test_fallback_mechanism.py  test_llm_config.py  test_mock_llm.py  test_pricing_engine.py  test_pricing_examples.py  test_rag_engine.py  test_rag_queries.py  validate_downloaded_data.py  validate_llm_infrastructure.py  validate_llm_setup.py  validate_pricing_engine.py  working_llm_test.py  (+3 more)
(+335 files in other folders)
